# MyMayaPlugin

./: CMakeLists.txt  LICENSE  MyMayaPlugin.sln  README.md
MyMayaPlugin/: MyMayaPlugin.vcxproj  MyMayaPlugin.vcxproj.filters  Unload.py  deltamush.cpp  deltamush.h  dllmain.cpp  framework.h  mesh.cpp  mesh.h  pch.cpp  pch.h  plugin.cpp  plugin.h
MyMayaPlugin/scripts/: Unload.py  port.mel
src/: aabb.h  collison.cpp  collison.h  debugdraweroverride.cpp  debugdraweroverride.h  deltamush.cpp  deltamush.h  deltamushnode.cpp  deltamushnode.h  framework.h  intersectionfilter.cpp  intersectionfilter.h  main.cpp  mesh.cpp  mesh.h  meshdata.h  plugin.cpp  plugin.h
src/scripts/: Load.py
